--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,6 @@ jobs:
         uses: ncipollo/release-action@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          name: nsmount ${{ github.ref }}
+          name: nsmount ${{ github.ref_name }}
           artifacts: "target/nsmount.amd64,target/nsmount.arm64,LICENSE"
           generateReleaseNotes: true
