--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
           fetch-depth: 0
       - uses: docker/setup-qemu-action@v3
       - uses: docker/setup-buildx-action@v3
-      - uses: actions-rust-lang/setup-rust-toolchain@v1
+      - uses: actions-rust-lang/setup-rust-toolchain@1780873c7b576612439a134613cc4cc74ce5538c #v1.15.2
 
       - name: Build
         run: |
@@ -39,7 +39,7 @@ jobs:
           cp ./target/aarch64-unknown-linux-gnu/release/nsmount ./target/nsmount.arm64
 
       - name: Publish GH Release
-        uses: ncipollo/release-action@v1
+        uses: ncipollo/release-action@b7eabc95ff50cbeeedec83973935c8f306dfcd0b
         if: startsWith(github.ref, 'refs/tags/')
         with:
           name: nsmount ${{ github.ref_name }}
